unpackaged/main/default/objects/Object_Event__e/Object_Event__e.object-meta.xml
<CustomObject>
    <label>Object Event</label>
    <pluralLabel>Object Event</pluralLabel>
</CustomObject>