unpackaged/main/default/objects/Object_Event__e/fields/New_Approver__c.field-meta.xml
<CustomField>
    <fullName>New_Approver__c</fullName>
    <label>New Approver</label>
    <length>100</length>
    <type>Text</type>
</CustomField>