unpackaged/main/default/objects/Object_Event__e/fields/New_Reviewer__c.field-meta.xml
<CustomField>
    <fullName>New_Reviewer__c</fullName>
    <label>New Reviewer</label>
    <length>100</length>
    <type>Text</type>
</CustomField>