unpackaged/main/default/objects/Object_Event__e/fields/Org_Id__c.field-meta.xml
<CustomField>
    <fullName>Org_Id__c</fullName>
    <defaultValue>$Organization.Id</defaultValue>
    <label>Org Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>